feat: Enhance all modules and add AI service utilities